Tag/UnTag related changes

--- a/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
+++ b/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
@@ -32,8 +32,8 @@
           <div class="row">
             <div class="col-xs-5"> <a href="javascript:void(0)" class="closebtn" (click)="closeNav()"><img
                   src="../../../../images/close.svg" alt=""></a></div>
-            <div class="col-xs-7 pro-n-setting" (click)="onSettingClick()"><a><img src="../../../../images/dp2.png"
-                  class="img-circle" width="24" height="24" alt="" /> Profile &
+            <div class="col-xs-7 pro-n-setting" (click)="onSettingClick()"><a><img src="../../../../images/settings.svg"
+                  class="img-circle" width="24" height="24" alt="" style="margin-top:-3px" /> Profile &
                 Settings</a></div>
           </div>
         </div>
