--- a/src/app/views/dashboard/persons/persons.component.html
+++ b/src/app/views/dashboard/persons/persons.component.html
@@ -2,65 +2,71 @@
   <div class="container">
     <div class="row">
       <form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
-        <div class="col-xs-9 search-box">
+        <div class="col-xs-9 col-md-10 search-box">
           <div class="form-group">
             <input type="text" class="form-control" formControlName="searchPerson" placeholder="Searching Persons">
           </div>
           <button type="submit" class="btn btn-default search-btn" id="searchButton"></button>
         </div>
+        <div class="col-xs-3 col-md-2 search-box text-center">
+          <div data-toggle="modal" data-target="#addPersonModal">
+            <img src="images/add-icon.svg" alt=""><br>
+            <span class="edit-detail">
+              <a class="font-orange fontBold">New Person</a>
+            </span>            
+          </div>
+        </div>
       </form>
-      <div class="col-xs-3 text-center" style="padding-right: 15px;padding-top: 45px;line-height: 18px;" >
-        <div data-toggle="modal"
-        data-target="#addPersonModal"><img src="images/add-icon.svg" alt=""><br><span class="edit-detail"><a
-            class="font-orange fontBold">New Person</a></span></div>
-      </div>
-
     </div>
     <div class="bottom-bord"></div>
-    <div class="clearfix paddingTop15"></div>
+    <div class="clearfix paddingTop15"></div>    
   </div>
 </div>
 
 <div class="container-fluid nospace">
-  <div class="container app-bg2 paddingTop85">
+  <div class="container app-bg2 paddingTop85 paddingBottom65">
     <div class="serach-result">
-
       <div class="row" *ngIf="hideNoDataDiv">
         <ul>
           <li *ngFor="let item of searchedPersons; let i = index;">
-            <div class="col-xs-12 col-md-6 cell-bg">
+            <div class="col-xs-12 col-md-6 cell-bg" [ngClass]="{'checkMarkedItem-bg' : isCheckMarkedItem(item)}">
               <div class="agent-detail ag-perform">
                 <div class="dp" (click)="onItemClick(item)">
-                  <img
-                    src="{{item.type=='A'?'../../../../../../images/baseline-business-24px.svg':'../../../../../../images/username.svg'}}"
-                    alt="" />
+                  <img src="{{item.type=='A'?'../../../../../../images/baseline-business-24px.svg':'../../../../../../images/username.svg'}}" alt="" />
                   <div class="dpProfile_wp proActiBg">{{item.stat}}</div>
                 </div>
-
-                <h4 class="topAgentsName"><a (click)="onItemClick(item)">{{item.name}}</a>
-                  <span (click)="onItemClick(item)"> ({{getAddress(item)}})</span>
+                <h4 class="topAgentsName">
+                  <a (click)="onItemClick(item)">{{item.name}}</a>
+                  <span (click)="onItemClick(item)"> ({{getAddress(item)}})</span>                   
                   <div class="clearfix paddingTop10"></div>
                   <span>{{getAgentName(item)}}</span>
                 </h4>
-                <a class="favouritIconPosition"><img
-                    src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
-                    alt="" (click)="onStarClick(item)"></a>
-
-                <div class="clearfix"></div>
-              </div>
+                <div class="icons">
+                  <div>
+                    <a class="favouritIconPosition" >
+                      <img src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}" alt="" (click)="onStarClick(item)">
+                    </a> 
+                  </div>
+                  
+                  <div *ngIf="isEnableToSelectItem" >
+                    <a class="checkMarkIconPosition">
+                      <img src="{{isCheckMarkedItem(item) ? '../../../../images/check.svg' : '../../../../images/check-default.svg'}}" alt="" height="20" width="22" (click)="onCheckMarkClick(item)">
+                    </a>
+                  </div>           
+                </div>
+                <div class="clearfix"></div>              
+              </div>              
             </div>
-
-          </li>
+          </li>          
         </ul>
-        <!-- <button (click)="topFunction()" id="myBtn" title="Go to top"><span
-            class="glyphicon glyphicon-arrow-up"></span></button> -->
-        <div class="row marginBottom20" *ngIf="moreDataAvailable">
-          <div class="col-xs-12 col-md-12 loadMoreWp">
-            <hr />
-            <div class="loadMore"><a (click)="onLoadMoreClick()" alt="Load More">Load More</a></div>
+        <div class="row marginBottom10" *ngIf="moreDataAvailable">
+          <div class="col-xs-12 col-md-12 loadMoreWp mt-20">
+            <hr/>
+            <div class="loadMore ">
+              <a (click)="onLoadMoreClick()" alt="Load More">Load More</a>
+            </div>
           </div>
         </div>
-        <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
       </div>
       <div class="serach-emp " *ngIf="!hideNoDataDiv">
         <h2><em>It is Empty Here!</em></h2>
@@ -68,4 +74,64 @@
       </div>
     </div>
   </div>
-  <app-add-person></app-add-person>
+</div>
+
+<div class="container actions-box" *ngIf="hideNoDataDiv">  
+  <div class="paddingTop5"></div>
+  <div class="bottom-bord"></div>
+  <div class="paddingTop10"></div>
+  <div class="row mb-5">
+    <div class="col-xs-2 text-center" *ngIf="isEnableToSelectAction">
+      <div (click)="onSelectActionClick()">
+        <img style="padding: 3px" src="../../../../images/check.svg" alt=""><br>
+        <span class="edit-detail">
+          <a class="font-orange fontBold">Select</a>
+        </span>
+      </div>
+    </div>
+    <div class="col-xs-2 text-center" *ngIf="!isEnableToSelectAction">
+      <div (click)="onSelectActionClick()">
+        <img style="padding: 5px" src="../../../../images/close-btn.svg" alt=""><br>
+        <span class="edit-detail">
+          <a class="font-orange fontBold">Deselect</a>
+        </span>
+      </div>
+    </div>    
+    <div class="col-xs-3 text-center">
+      <div (click)="onSelectAllClick()">
+        <img src="../../../../images/double_check.svg" alt=""><br>
+        <span class="edit-detail">
+          <a class="font-orange fontBold">Select All</a>
+        </span>
+      </div>        
+    </div>
+
+    <div class="col-xs-3 text-center">
+      <div (click)="onDeselectAllClick()">
+        <img src="../../../../images/double_check_remove.svg" alt=""><br>
+        <span class="edit-detail">
+          <a class="font-orange fontBold">Deselect All</a>
+        </span>
+      </div>
+    </div> 
+    <div class="col-xs-2 text-center">
+      <div [ngClass]="{disable: !isEnableToTagAction}" data-toggle="modal"  (click)="openAddTagDialog()">
+        <img src="{{isEnableToTagAction ? '../../../../images/tag-fill.svg' : '../../../../images/tag-grey-fill.svg'}}" alt=""><br>
+        <span class="edit-detail">
+          <a class="fontBold" [ngClass]="{'font-grey' : !isEnableToTagAction,'font-orange' : isEnableToTagAction }">Tag</a>
+        </span>
+      </div>
+    </div>
+    <div class="col-xs-2 text-center">
+      <div [ngClass]="{disable: !isEnableToUnTagAction}"  (click)="onUnTagActionClick()">
+        <img src="{{isEnableToUnTagAction ? '../../../../images/tag.svg' : '../../../../images/tag-grey.svg'}}" alt=""><br>        
+        <span class="edit-detail">
+          <a class="fontBold" [ngClass]="{'font-grey' : !isEnableToUnTagAction,'font-orange' : isEnableToUnTagAction }">Un-Tag</a>
+        </span>
+      </div>
+    </div>       
+  </div>
+</div>   
+
+
+<app-add-person></app-add-person>
