--- a/src/app/views/notification-controls/notification-controls.component.html
+++ b/src/app/views/notification-controls/notification-controls.component.html
@@ -2,7 +2,7 @@
 
   <div class="container nav-bg">
     <div class="row">
-      <div class="col-xs-2 toppad"><a href=""><img src="../../../images/back-btn.svg" alt=""></a></div>
+      <div class="col-xs-2 toppad"><img src="../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
       <div class="col-xs-8 text-center">
         <h1 class="t-agent">Notification Control</h1>
       </div>
