Android App related changes

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -60,7 +60,7 @@
             <div class="clearfix paddingTop15"></div>
 
             <div class="forgotpass"><a href="../forgot-password">Forgot your password?</a></div>
-           <!-- <div class="forgotpass"><a href="../config-server">Change Server</a></div> --> 
+            <div class="forgotpass"><a href="../config-server">Change Server</a></div>
           </div>
         </form>
       </div>
